# CMake

./: .gitignore  .gitmodules  readme.md
FirstProject/: CMakeLists.txt  Makefile  readme.md
FirstProject/app/: CMakeLists.txt  main.cc
FirstProject/cmake/: AddGitSubmodule.cmake  LTO.cmake  Sanitizer.cmake  Warning.cmake
FirstProject/configure/: config.hpp.in
FirstProject/src/: CMakeLists.txt  my_lib.cc
FirstProject/tests/: CMakeLists.txt  main.cc
HelloWorld/: CMakeLists.txt  Makefile
HelloWorld/app/: CMakeLists.txt  main.cc
HelloWorld/cmake/: AddGitSubmodule.cmake
HelloWorld/configure/: config.hpp.in
HelloWorld/src/: CMakeLists.txt  my_lib.cc  my_lib.h
